# gitcplusplus

./: CMakeLists.txt  README.md  main.cpp
include/: Blob.h  Commit.h  Object.h  Util.h  common.h  vars.h
src/: Object.cpp  Util.cpp
